@@ -1,3 +1,6 @@
+2011-03-08  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/amsamba.pl: Use smbclient -TF for restore.
+
 2011-03-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amtrmidx.c: Fix memory leak.
 
